fix overlapping menu issue

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -11,7 +11,7 @@
 	ul {
 		display: none;
 		list-style: none;
-		margin: 0;
+		margin: 0 0 -15px;
 		padding-left: 0;
 		font-size: 0.9em;
 		text-transform: uppercase;
@@ -168,10 +168,6 @@
 			font-size: 0.75em;
 		}
 	}
-}
-
-#primary-nav-menu > ul > li {
-	margin-bottom: -15px;
 }
 
 /* Small menu. */
